--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Włodek Bzyl" />
+   <meta name="author" content="" />
    <link href="http://inf.ug.edu.pl/~wbzyl/atom.xml" rel="alternate" 
-         title="Włodek Bzyl" type="application/atom+xml" />
+         title="" type="application/atom+xml" />
 
    <link rel="stylesheet" href="../../../../css/syntax.css" type="text/css" />
    <link rel="stylesheet" href="../../../../css/screen.css" type="text/css" media="screen, projection" />
@@ -19,7 +19,7 @@
 
   <div class="title span-21">
     <img class="prepend-1" src="../../../../images/logo.png" alt="[logo]" />
-    <a class="append-7" href="/~wbzyl/">home</a>
+    <a class="append-7" href="/~pmajewski/">home</a>
   </div>
   
   {{ content }}
